# p

./: .gitignore  .pre-commit-config.yaml  README.md  p.py  pyproject.toml
.github/workflows/: check.yaml
tests/: test_p.py
